# TinyRayTracer

./: CMakeLists.txt  README.md  main.cpp
include/: ppm.h  primitives.h  ray.h  rayCone.h  rayTracer.h  sampler.h  utils.h
src/: ppm.cpp  primitives.cpp  ray.cpp  rayCone.cpp  rayTracer.cpp  sampler.cpp  utils.cpp
